app/static/less/timer_page.less
/* ... */
.no-padding {
    padding: 0;
}

.comment-upload {
    background: none repeat scroll 0 0 @off-white;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    -ms-border-radius: 4px;
    -o-border-radius: 4px;
    border-radius: 4px;
    float: left;
    width: 100%;
}

.comment-upload form {
    float: left;
    width: 100%;
}

.comment-upload form textarea {
    background: none repeat scroll 0 0 #fff;
    border: medium none;
    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    -ms-border-radius: 4px 4px 0 0;
    -o-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
    color: #000000;
    float: left;
    font-size: 14px;
    height: 160px;
    letter-spacing: 0.3px;
    padding: 20px;
    width: 100%;
    resize:vertical;
    outline:none;
    border: 1px solid #F2F2F2;
}

.bootbox .modal-header {
    display: block;

    .modal-title {
        font-size: 20px;
        font-weight: normal;
    }
}

.bootbox-form {
    margin-bottom: 0px;
}

.scramble_preview_buffer {
    width: 100%;
    &.clickable {
        cursor: pointer;
    }
}

#fade-wrapper {
    display: none;
    position: fixed;
    cursor: pointer;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background: rgba(0, 0, 0, 0.95);

    &.shown {
        display: flex !important;
        align-items: center;
        justify-content: center;
    }
}

// ---------------------------------------------------------------------------------------------------------
// ---------------------------------------------------------------------------------------------------------

#pentagons {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  
    pointer-events: none;
  
    /* The pentagons are hidden until they are shown by a CSS animation */
    opacity: 0;
}

.timer2-container {
    margin-top: @navbar-height;
    // height: 100%;
    height: ~"calc(100% - 48px)"; // 48px is navbar-height, but we can't use a variable in this context
}

.timer2_flex_full_center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.timer2_upper_area {
    display: flex;

    height: 30%;
    width: 100%;

    .timer2_scramble_area {
        width: 100%;
        height: 100%;
        padding: 10px;

        color: white;
        font-family: 'Roboto', sans-serif;
        font-weight: 400;

        .scram2 {
            border: 3px solid white;
            padding: 10px;
            height: 100%;
        }
    }
}

.timer2_right_portion {
    height: 100%;
    width: 80%;
    // background-color: red;
}

.timer2_left_portion {
    height: 100%;
    width: 20%;
    // background-color: green;
}


.timer2_lower_area {
    height: 70%;
    width: 100%;
}

#the_timer {
    height: 50%;
    width: 100%;

    font-family: 'Roboto', sans-serif;

    color: white;

    position: relative;
    display: flex;

    .timer_text {
        width: 100%;
        font-size: 160px;

        position: absolute;
        bottom: -20px;
    }

    // background-color: orange;
}

.timer2_mods_area {
    height: 50%;
    width: 100%;

    .timer2_controls_wrapper {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    // background-color: grey;
}

.timer2_control_icon {
    margin: 0 20px;

    .btn-timer-control {
        height: 48px;
        width: 75px;
        border-width: 2px;
    }
}

.timer2_sidebar {
    background-color: white;
    padding: 10px;
    height: 100%;
    width: 100%;

    box-shadow: 5px 0px 7px 0px rgba(0,0,0,0.64);
    -webkit-box-shadow: 5px 0px 7px 0px rgba(0,0,0,0.64);
    -moz-box-shadow: 5px 0px 7px 0px rgba(0,0,0,0.64);

    .timer2_times {
        height: 50%;

        font-family: "Droid Sans Mono";

        .timer2_single_time {
            padding: 10px;
            font-size: 22px;
            text-align: center;
            border-bottom: 1px solid #eeeeee;

            display: flex;
            align-items: center;
            justify-content: center;

            &.ao5 {
                height: 20%;
            }
        }
    }

    .timer2_preview {
        height: 50%;
    }
}

.timer2_sidebar_wrapper {
    padding-right: 10px;
    height: 100%;
    width: 100%;
    position: relative;
}

